Refactor index.html for improved SEO and update favicon; enhance App.css with new color scheme and styles; integrate @react-three/fiber and @react-three/drei for 3D rendering; update package.json and package-lock.json with new dependencies; modify About component skills list.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Eliott Valette - Deep Learning Student & Full Stack Developer" />
+    <meta name="keywords" content="Deep Learning, Full Stack Developer, React, Three.js, AI" />
+    <meta name="author" content="Eliott Valette" />
+    <meta property="og:title" content="Eliott Valette - Portfolio" />
+    <meta property="og:description" content="Deep Learning Student & Full Stack Developer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://eliottvalette.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Eliott Valette - Portfolio" />
+    <meta name="twitter:description" content="Deep Learning Student & Full Stack Developer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <title>Eliott Valette | Deep Learning & Full Stack Developer</title>
   </head>
   <body>
     <div id="root"></div>
